--- a/public/style_sheets/client_manage_worker.css
+++ b/public/style_sheets/client_manage_worker.css
@@ -518,6 +518,11 @@ input[type=radio] {
   .dashboard-content {
     background: none;
     box-shadow: none;
+    width: 100%;
+    margin-top: 0;
+  }
+  .navbar-name {
+    margin-bottom: 0.5rem;
   }
   .right-container {
     background-color: white;
